--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/bf903a51f2.js"
       crossorigin="anonymous"
@@ -25,31 +28,37 @@
     <header class="py-3">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-        <a href="index.html" class="navbar-brand">
-          <div class="header-icon d-flex align-items-center">
-             <img src="images/kettlebell-svgrepo-com.svg" class="d-inline-block header-icon" alt="kettlebell" />
-          <span class="header-icon-text">Kettlebell Kings</span>
+          <a href="index.html" class="navbar-brand">
+            <div class="header-icon d-flex align-items-center">
+              <img
+                src="images/kettlebell-svgrepo-com.svg"
+                class="d-inline-block header-icon"
+                alt="kettlebell"
+              />
+              <span class="header-icon-text">Kettlebell Kings</span>
+            </div>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#myNavbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item mx-2">Home</li>
+              <li class="nav-item mx-2">Products</li>
+              <li class="nav-item mx-2">Else</li>
+            </ul>
+            <div class="navbar-icons">
+              <i class="fas fa-search mx-3"></i>
+              <i class="fas fa-shopping-cart"></i>
+            </div>
           </div>
-         
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#myNavbar"
-          aria-expanded="false" aria-label="Toggle navigation"
-        ><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item mx-2">Home</li>
-            <li class="nav-item mx-2">Products</li>
-            <li class="nav-item mx-2">Else</li>
-          </ul>
-          <div class="navbar-icons">
-            <i class="fas fa-search mx-3"></i>
-            <i class="fas fa-shopping-cart"></i>
-          </div>
-        </div>
         </div>
       </nav>
     </header>
@@ -58,36 +67,72 @@
         <div class="row">
           <div class="col-10 mx-auto col-lg-4 text-center my-5">
             <div class="main-image">
-              <img src="images/clean.jpg" class="img-fluid" alt="">
+              <img src="images/clean.jpg" class="img-fluid" alt="" />
             </div>
             <div class="row product-photos mt-4">
               <div class="col-4 col-sm-4 single-product-photo">
-                <img src="images/double-clean.jpg" class="img-fluid" alt="">
+                <img src="images/double-clean.jpg" class="img-fluid" alt="" />
               </div>
-               <div class="col-4 col-sm-4 single-product-photo">
-                <img src="images/swing.jpg" class="img-fluid" alt="">
+              <div class="col-4 col-sm-4 single-product-photo">
+                <img src="images/swing.jpg" class="img-fluid" alt="" />
               </div>
-               <div class="col-4 col-sm-4 single-product-photo">
-               <img src="images/clean.jpg" class="img-fluid" alt="">
+              <div class="col-4 col-sm-4 single-product-photo">
+                <img src="images/clean.jpg" class="img-fluid" alt="" />
               </div>
             </div>
           </div>
-           <div class="product-details col-10 mx-auto col-lg-4 text-center my-5">
-           <h2>Competition Kettlebell - 8 to 32 kg</h2>
-           <div class="rating">
-             <i class="fas fa-star"></i>
-             <i class="fas fa-star"></i>
-             <i class="fas fa-star"></i>
-             <i class="fas fa-star"></i>
-             <i class="fas fa-star"></i>
-             <span>11 reviews</span>
-           </div>
-           </div>
+          <div class="product-details col-10 mx-auto col-lg-4 text-center my-5">
+            <h2>Competition Kettlebell - 8 to 32 kg</h2>
+            <div class="rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <span>11 reviews</span>
+            </div>
+            <div class="product-detail-text py-3">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+                quisquam quis praesentium quas? Ducimus distinctio, animi eos
+                deleniti labore eveniet nisi, porro necessitatibus sit numquam
+                amet vitae voluptas quasi sapiente!
+              </p>
+            </div>
+            <div class="row product-select">
+              <div class="col-6 col-md-3 mb-3">
+                <input type="radio" id="8" name="weight" checked />
+                <label for="8"> &nbsp;8kg - 25&euro;</label>
+              </div>
+             <div class="col-6 col-md-3 mb-3">
+                <input type="radio" id="16" name="weight" />
+                <label for="16">16kg - 35&euro;</label>
+              </div>
+               <div class="col-6 col-md-3">
+                <input type="radio" id="24" value="24" name="weight" />
+                <label for="24">24kg - 45&euro;</label>
+              </div>
+               <div class="col-6 col-md-3">
+                <input type="radio" id="32" value="32" name="weight" />
+                <label for="32">32kg - 60&euro;</label>
+              </div>
+            </div>
+
+            <div class="row product-details-add py-4">
+              <div class="numbers mx-auto d-flex justify-content-center col-6 mb-3 mb-md-0">
+                <span class="minus">-</span>
+                <span class="quantity">1</span>
+                <span class="plus">+</span>
+              </div>
+              <div class="col-8 col-md-6 mx-auto">
+              <button type="button" class="wishlist-btn">Wishlist</button>
+              <button type="button" class="cart-btn">Add to cart</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      
     </article>
-   
 
     <footer class="p-5">
       <div class="container">
@@ -120,7 +165,7 @@
         </div>
       </div>
     </footer>
-   
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
