--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul class="navbar-nav mx-auto">
               <li class="nav-item mx-2">Home</li>
               <li class="nav-item mx-2">Products</li>
-              <li class="nav-item mx-2">Else</li>
+              <li class="nav-item mx-2">Other</li>
             </ul>
             <div class="navbar-icons">
               <i class="fas fa-search mx-3"></i>
